# cliapp-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
example/constexpr/src/: main.rs
examples/: constexpr.rs
examples/constexpr/src/: main.rs
src/: lib.rs
src/constexpr/: application.rs  flags.rs  mod.rs  parameters.rs  subcommand.rs
src/constexpr/tests/: flags.rs  mod.rs  parameters.rs
